feat: create searcher hierarchy